--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,6 +3,10 @@
 <div class="post">
   <h1 class="post-title">{{ .Title }}</h1>
   <span class="post-date">{{ .Site.Params.DateForm | default "Jan 2, 2006" | .Date.Format }}</span>
+  {{ if (gt .WordCount .Site.Params.tocWords) }}
+    {{ .TableOfContents }}
+    <hr />
+  {{ end }}
   {{ .Content }}
   {{- if .Site.DisqusShortname -}}
   <hr>
