--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,30 +1,15 @@
 {{ partial "default_head.html" . }}
 
-<!-- Space delimited list of page types -->
-{{ $paginator := .Paginate (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
-
-<div class="posts">
-  {{ range .Paginator.Pages }}
-    <div class="post">
-        <h1 class="post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
-        <span class="post-date">{{ .Site.Params.DateForm | default "Jan 2, 2006" | .Date.Format }}</span>
-        {{ .Content }}
-    </div>
-  {{ end }}
-</div>
-
-<div class="pagination">
-  {{ if $paginator.HasNext }}
-  <a class="pagination-item older" href="{{ $paginator.Next.URL }}">Older</a>
-  {{ else }}
-  <span class="pagination-item older">Older</span>
-  {{ end }}
-
-  {{ if $paginator.HasPrev }}
-  <a class="pagination-item newer" href="{{ $paginator.Prev.URL }}">Newer</a>
-  {{ else }}
-  <span class="pagination-item newer">Newer</span>
-  {{ end }}
+<div class="post">
+  <h1 class="post-title">Posts</h1>
+  <table id="list">
+    {{ range (where .Site.Pages "Type" "post") }}
+    <tr>
+      <td>{{ .Site.Params.DateForm | default "2006.01.02" | .Date.Format }}</td>
+      <td><a href="{{ .Permalink }}">{{ .Title }}</a></td>
+    </tr>
+    {{ end }}
+  </table>
 </div>
 
 {{ partial "default_foot.html" . }}
