--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,21 +12,16 @@
     {{ end }}
   </title>
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="/css/poole.css">
-  <link rel="stylesheet" href="/css/syntax.css">
-  <link rel="stylesheet" href="/css/lanyon.css">
-  {{- if not .Site.Params.disableFonts }}
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400">
-  {{- end }}
   {{- range .Site.Params.customCSS }}
   <link rel="stylesheet" href="{{ . | relURL }}">
   {{- end }}
 
-  <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/apple-touch-icon-144-precomposed.png">
-  <link rel="shortcut icon" href="/assets/favicon.ico">
-
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+
+  {{ template "partials/head/base_css.html" . }}
+
+  {{ template "_internal/opengraph.html" . }}
+  {{ template "_internal/schema.html" . }}
+  {{ template "partials/head/favicon.html" . }}
 </head>
