--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -15,10 +15,9 @@
   </div>
 
   <nav class="sidebar-nav">
-    <a class="sidebar-nav-item {{ if .IsHome }} active {{ end }}" href="/">Home</a>
-    <a class="sidebar-nav-item {{ if eq .RelPermalink "/post/" }} active {{ end }}" href="/post">Posts</a>
     {{- $currentPage := . }}
     {{- range .Site.Menus.main -}}
+    {{ $currentPage }}
     <a class="sidebar-nav-item{{if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }} active{{end}}" href="{{ .URL }}" title="{{ .Title }}">{{ .Name }}</a>
     {{- end -}}
 
@@ -27,12 +26,6 @@
       {{ if isset .Params "sidebar" -}}
         <a class="sidebar-nav-item {{ if eq .Permalink $thisperma }} active {{ end }}" href="{{ .Permalink }}">{{ .Title }}</a>
       {{ end -}}
-    {{ end -}}
-
-    {{- with .Site.Params.Github }}
-    <a class="sidebar-nav-item" href="{{ .url }}/archive/{{ .head }}.zip">Download</a>
-    <a class="sidebar-nav-item" href="{{ .url }}">GitHub project</a>
-    <span class="sidebar-nav-item">Currently on {{ .head }}</span>
     {{ end -}}
   </nav>
 
