Remove table styles for post list

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -29,7 +29,8 @@ div.post {
 }
 
 .post {
-  table.list {
+  table#list {
+    border: none;
     td {
       border: none;
       background-color: transparent;
