--- a/assets/styles/lanyon.scss
+++ b/assets/styles/lanyon.scss
@@ -36,6 +36,9 @@
 html,
 body {
   overflow-x: hidden;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 html {
@@ -61,6 +64,8 @@ h1, h2, h3, h4, h5, h6 {
 .wrap {
   position: relative;
   width: 100%;
+
+  flex: 1 0 auto;
 }
 
 
@@ -243,6 +248,19 @@ a.pagination-item:hover {
   }
 }
 
+/*
+ * Footer
+ */
+footer {
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .copyright {
+    color: #6e7781;
+    font-size: smaller;
+  }
+}
 
 /*
  * Reverse layout
