--- a/layouts/partials/default_foot.html
+++ b/layouts/partials/default_foot.html
@@ -1,4 +1,7 @@
       </div>
+      <footer>
+        <p class="copyright">&copy; {{ if .Site.Params.Author }} {{ .Site.Params.Author }} {{ end }} {{ .Site.LastChange.Year }}. All rights reserved.</p>
+      </footer>
     </div>
   </body>
 </html>
